# mcp-server-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile  Makefile  README.md  TEST_RESULTS.md  cloudbuild.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  server.py
.claude/expertise/: project.yaml
REQ/: REQ-1.md  REQ-2-CLOUD-RUN-DEPLOYMENT.md
config/: __init__.py  booking_constants.py  settings.py
deploy/: Dockerfile.cloudrun  README.md  env.production
mcp_handlers/: __init__.py  booking_handlers.py  otp_handler.py  prompt_handlers.py  resource_handlers.py  sales_handlers.py
scripts/: init_cloud_sql.py  load_sample_products.py  migrate_booking_tables.py  test_production.py
sql/: 000_init_extensions_and_schema.sql  001_create_otp_codes.sql  002_create_booking_tables.sql  003_fix_search_indexes.sql
tests/: monitor_logs.sh  start_mcp.sh  test_mcp_curl.sh  test_mcp_endpoints.sh  test_official_mcp_fixed.py  test_tools.sh
tools/bookings/: __init__.py  availability.py  calendar.py  core.py  email.py  helpers.py  queries.py
tools/otp/: __init__.py  generator.py  storage.py  validator.py
tools/sales/: __init__.py  bant_analyzer.py  embedding_search.py  fetch.py  fuzzy_search.py  search.py
utils/: concurrency.py  db_async.py  email_client.py  embeddings.py  google_calendar.py  logger.py  pagination.py  rate_limiter.py  tool_discovery_validator.py  tool_registry.py  validation.py
